Fixes card layout on ios devices

--- a/src/app/root/twitter-cards/twitter-cards.component.scss
+++ b/src/app/root/twitter-cards/twitter-cards.component.scss
@@ -81,7 +81,6 @@
 }
 
 .card-body {
-  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
